--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
-<h1>Titel</h1>
-<p>Text</p>
-<ul>
-  <li>Eintrag A</li>
-  <li>Eintrag B</li>
-</ul>
+<!DOCTYPE html>
+<html lang="de">
+  <head>
+    <meta charset="utf-8">
+    <title>Test</title>
+  </head>
+  <body>
+    <h1>Titel</h1>
+    <p>Text</p>
+    <ul>
+      <li>Eintrag A</li>
+      <li>Eintrag B</li>
+    </ul>
+  </body>
+</html>
+
